tests/input/ill-typed/extra-tests/multi-parameter/bad-logic-and-1.stella
language core;

fn and_fn(n : Nat, m : Bool) -> Nat {
    return n and m;
}

fn main(n : Nat) -> Nat {
  return and_fn(n, true);
}
